# ecs-2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  wait_for_mongo.sh
forms/: jason_forms.py
routes/client_routes/: get_actions_routes.py  post_actions_routes.py  tables_data_routes.py  tables_routes.py
routes/general_routes/: authentication_routes.py  landing_pages_routes.py  registration_routes.py
routes/master_routes/: get_actions_routes.py  post_actions_routes.py  tables_data_routes.py  tables_routes.py
static/css/: index.css  master-signup.css  master_landing_page.css
static/js/: client-signup.js  index.js  master-signup.js
templates/: client-signup.html  index.html  master-signup.html
templates/base/: client_base.html  master_base.html
templates/client_user/: client_all_signings.html  client_approve_switch.html  client_inventory.html  client_landing_page.html  client_signings.html  client_switch_requests.html  client_switch_signing.html  switch_signing_lock.html
templates/master_user/: master_amplifier_selection.html  master_amplifier_status.html  master_amplifier_todo.html  master_approve_switch.html  master_clients_table.html  master_inventory.html  master_kit_add_items.html  master_kit_content.html  master_kit_lock.html  master_kit_remove_items.html  master_kits.html  master_landing_page.html  master_logs.html  master_new_kit_items.html  master_new_signing.html  (+8 more)
utils/: dependecy_functions.py  helpers.py  init_config.py  logger_config.py  mongo-db.py  mongo_db.py  pydantic_forms.py
(+49 files in other folders)
